Mega menu column spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -1456,3 +1456,8 @@ label {
 .form-edit-button{
     float: right;
 }
+
+.center-aligned{
+    display: flex;
+    justify-content: center;
+}
